added https://  jqueary link in Index.html

--- a/Index.html
+++ b/Index.html
@@ -17,18 +17,18 @@
     <!-- Any title is fine                         -->
     <!--                                           -->
     <title>CEM Dashboard Alert Page</title>
-    
+
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="tmppagedashboard/tmppagedashboard.nocache.js"></script>
-        <script type="text/javascript" 
-   src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"> 
+        <script type="text/javascript"
+   src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"> 
 	</script>
 	<script type="text/javascript" src="tmppagedashboard/js/highcharts.js"></script>
-    
+
 <!--     <script type="text/javascript"  -->
 <!--   	 src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">  -->
 <!-- 	</script> -->
